Tutorial till css start

--- a/rohan.htm
+++ b/rohan.htm
@@ -10,7 +10,7 @@
     <title>rohanpp</title>
 
     <!-- this is how you include external css file in html file -->
-    <link rel="stylesheet" href="rohan.css">
+    <link rel="stylesheet" href="t12.css">
 
     <!-- this is how you include external javaScript file in html file -->
     <script src="rohan.js"></script>
